@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--*- mode: xml -*-->
+<?xml version="1.0"?>
 <glade-interface>
+  <!-- interface-requires gtk+ 2.16 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkWindow" id="main_window">
     <property name="title" translatable="yes">ChmSee</property>
     <property name="default_width">800</property>
@@ -13,7 +13,6 @@
         <child>
           <widget class="GtkHandleBox" id="handlebox2">
             <property name="visible">True</property>
-            <property name="shadow_type">GTK_SHADOW_OUT</property>
             <child>
               <widget class="GtkMenuBar" id="menubar1">
                 <property name="visible">True</property>
@@ -26,10 +25,9 @@
                       <widget class="GtkMenu" id="menu_file_menu">
                         <child>
                           <widget class="GtkImageMenuItem" id="menu_open">
-                            <property name="visible">True</property>
                             <property name="label">gtk-open</property>
+                            <property name="visible">True</property>
                             <property name="use_underline">True</property>
-                            <property name="use_stock">True</property>
                           </widget>
                         </child>
                         <child>
@@ -53,10 +51,9 @@
                         </child>
                         <child>
                           <widget class="GtkImageMenuItem" id="menu_quit">
-                            <property name="visible">True</property>
                             <property name="label">gtk-quit</property>
+                            <property name="visible">True</property>
                             <property name="use_underline">True</property>
-                            <property name="use_stock">True</property>
                           </widget>
                         </child>
                       </widget>
@@ -72,10 +69,9 @@
                       <widget class="GtkMenu" id="menu_edit_menu">
                         <child>
                           <widget class="GtkImageMenuItem" id="menu_copy">
-                            <property name="visible">True</property>
                             <property name="label">gtk-copy</property>
+                            <property name="visible">True</property>
                             <property name="use_underline">True</property>
-                            <property name="use_stock">True</property>
                           </widget>
                         </child>
                         <child>
@@ -85,16 +81,9 @@
                         </child>
                         <child>
                           <widget class="GtkImageMenuItem" id="menu_setup">
+                            <property name="label">_Setup</property>
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">_Setup</property>
                             <property name="use_underline">True</property>
-                            <child internal-child="image">
-                              <widget class="GtkImage" id="image2">
-                                <property name="visible">True</property>
-                                <property name="stock">gtk-preferences</property>
-                                <property name="icon_size">1</property>
-                              </widget>
-                            </child>
                           </widget>
                         </child>
                       </widget>
@@ -110,32 +99,23 @@
                       <widget class="GtkMenu" id="menu_view_menu">
                         <child>
                           <widget class="GtkImageMenuItem" id="menu_home">
+                            <property name="label">_Home</property>
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">_Home</property>
                             <property name="use_underline">True</property>
-                            <child internal-child="image">
-                              <widget class="GtkImage" id="image3">
-                                <property name="visible">True</property>
-                                <property name="stock">gtk-home</property>
-                                <property name="icon_size">1</property>
-                              </widget>
-                            </child>
                           </widget>
                         </child>
                         <child>
                           <widget class="GtkImageMenuItem" id="menu_back">
-                            <property name="visible">True</property>
                             <property name="label">gtk-go-back</property>
+                            <property name="visible">True</property>
                             <property name="use_underline">True</property>
-                            <property name="use_stock">True</property>
                           </widget>
                         </child>
                         <child>
                           <widget class="GtkImageMenuItem" id="menu_forward">
-                            <property name="visible">True</property>
                             <property name="label">gtk-go-forward</property>
+                            <property name="visible">True</property>
                             <property name="use_underline">True</property>
-                            <property name="use_stock">True</property>
                           </widget>
                         </child>
                       </widget>
@@ -151,10 +131,9 @@
                       <widget class="GtkMenu" id="menu_help_menu">
                         <child>
                           <widget class="GtkImageMenuItem" id="menu_about">
-                            <property name="visible">True</property>
                             <property name="label">gtk-about</property>
+                            <property name="visible">True</property>
                             <property name="use_underline">True</property>
-                            <property name="use_stock">True</property>
                           </widget>
                         </child>
                       </widget>
@@ -166,16 +145,16 @@
           </widget>
           <packing>
             <property name="expand">False</property>
+            <property name="position">0</property>
           </packing>
         </child>
         <child>
           <widget class="GtkHandleBox" id="handlebox1">
             <property name="visible">True</property>
-            <property name="shadow_type">GTK_SHADOW_OUT</property>
             <child>
               <widget class="GtkToolbar" id="main_toolbar">
                 <property name="visible">True</property>
-                <property name="toolbar_style">GTK_TOOLBAR_ICONS</property>
+                <property name="toolbar_style">icons</property>
                 <child>
                   <widget class="GtkToolButton" id="toolbar_open">
                     <property name="visible">True</property>
@@ -184,6 +163,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
@@ -192,7 +172,6 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="homogeneous">False</property>
                   </packing>
                 </child>
                 <child>
@@ -204,6 +183,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
@@ -215,6 +195,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
@@ -226,6 +207,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
@@ -239,6 +221,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
@@ -250,6 +233,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
@@ -261,6 +245,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
@@ -272,6 +257,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
@@ -280,7 +266,6 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="homogeneous">False</property>
                   </packing>
                 </child>
                 <child>
@@ -293,6 +278,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
@@ -305,6 +291,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
                   </packing>
                 </child>
               </widget>
@@ -360,7 +347,7 @@
     <property name="visible">True</property>
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Setup</property>
-    <property name="window_position">GTK_WIN_POS_CENTER</property>
+    <property name="window_position">center</property>
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
@@ -368,7 +355,7 @@
           <widget class="GtkFrame" id="frame1">
             <property name="visible">True</property>
             <property name="label_xalign">0</property>
-            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <property name="shadow_type">none</property>
             <child>
               <widget class="GtkAlignment" id="alignment2">
                 <property name="visible">True</property>
@@ -387,16 +374,17 @@
                           </widget>
                           <packing>
                             <property name="padding">3</property>
+                            <property name="position">0</property>
                           </packing>
                         </child>
                         <child>
                           <widget class="GtkButton" id="setup_clear">
+                            <property name="label">gtk-clear</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
                             <property name="border_width">5</property>
-                            <property name="label">gtk-clear</property>
                             <property name="use_stock">True</property>
-                            <property name="response_id">0</property>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -406,6 +394,9 @@
                           </packing>
                         </child>
                       </widget>
+                      <packing>
+                        <property name="position">0</property>
+                      </packing>
                     </child>
                     <child>
                       <widget class="GtkLabel" id="label2">
@@ -439,13 +430,14 @@ NOTE: If you are viewing a CHM file, you need reopen it after cleaning.</propert
           </widget>
           <packing>
             <property name="expand">False</property>
+            <property name="position">0</property>
           </packing>
         </child>
         <child>
           <widget class="GtkFrame" id="frame2">
             <property name="visible">True</property>
             <property name="label_xalign">0</property>
-            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <property name="shadow_type">none</property>
             <child>
               <widget class="GtkAlignment" id="alignment3">
                 <property name="visible">True</property>
@@ -465,6 +457,7 @@ NOTE: If you are viewing a CHM file, you need reopen it after cleaning.</propert
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                             <property name="padding">3</property>
+                            <property name="position">0</property>
                           </packing>
                         </child>
                         <child>
@@ -472,7 +465,7 @@ NOTE: If you are viewing a CHM file, you need reopen it after cleaning.</propert
                             <property name="visible">True</property>
                             <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
-                            <property name="response_id">0</property>
+                            <property name="receives_default">False</property>
                             <property name="use_font">True</property>
                           </widget>
                           <packing>
@@ -485,6 +478,7 @@ NOTE: If you are viewing a CHM file, you need reopen it after cleaning.</propert
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">2</property>
+                        <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
@@ -499,6 +493,7 @@ NOTE: If you are viewing a CHM file, you need reopen it after cleaning.</propert
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                             <property name="padding">3</property>
+                            <property name="position">0</property>
                           </packing>
                         </child>
                         <child>
@@ -506,7 +501,7 @@ NOTE: If you are viewing a CHM file, you need reopen it after cleaning.</propert
                             <property name="visible">True</property>
                             <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
-                            <property name="response_id">0</property>
+                            <property name="receives_default">False</property>
                             <property name="use_font">True</property>
                           </widget>
                           <packing>
@@ -542,7 +537,7 @@ NOTE: If you are viewing a CHM file, you need reopen it after cleaning.</propert
           <widget class="GtkFrame" id="frame3">
             <property name="visible">True</property>
             <property name="label_xalign">0</property>
-            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <property name="shadow_type">none</property>
             <child>
               <widget class="GtkAlignment" id="alignment4">
                 <property name="visible">True</property>
@@ -559,6 +554,7 @@ NOTE: If you are viewing a CHM file, you need reopen it after cleaning.</propert
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">3</property>
+                        <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
@@ -599,17 +595,20 @@ Ukrainain</property>
         <child>
           <widget class="GtkHButtonBox" id="hbuttonbox1">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="setup_close">
+                <property name="label">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
+                <property name="receives_default">False</property>
                 <property name="border_width">6</property>
-                <property name="label">gtk-close</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">0</property>
               </widget>
+              <packing>
+                <property name="position">0</property>
+              </packing>
             </child>
           </widget>
           <packing>
@@ -621,8 +620,8 @@ Ukrainain</property>
   </widget>
   <widget class="GtkAboutDialog" id="about_dialog">
     <property name="visible">True</property>
-    <property name="window_position">GTK_WIN_POS_CENTER</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
+    <property name="window_position">center</property>
+    <property name="type_hint">normal</property>
     <property name="comments" translatable="yes">The HTML Help(CHM) viewer for Unix/Linux</property>
     <property name="website">http://code.google.com/p/chmsee</property>
     <property name="website_label" translatable="yes">http://code.google.com/p/chmsee</property>
@@ -635,11 +634,11 @@ rae l &lt;crquan@gmail.com&gt;</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
         <child internal-child="action_area">
-          <widget class="GtkHButtonBox" id="dialog-action_area1">
-          </widget>
+          <widget class="GtkHButtonBox" id="dialog-action_area1"/>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </widget>
@@ -649,7 +648,7 @@ rae l &lt;crquan@gmail.com&gt;</property>
     <property name="visible">True</property>
     <property name="title" translatable="yes">Open File</property>
     <property name="modal">True</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
@@ -657,26 +656,31 @@ rae l &lt;crquan@gmail.com&gt;</property>
         <child internal-child="action_area">
           <widget class="GtkHButtonBox" id="dialog-action_area3">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="button4">
+                <property name="label">gtk-cancel</property>
+                <property name="response_id">-6</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
-                <property name="label">gtk-cancel</property>
+                <property name="receives_default">False</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">-6</property>
               </widget>
+              <packing>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
               <widget class="GtkButton" id="button5">
+                <property name="label">gtk-open</property>
+                <property name="response_id">-5</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="has_default">True</property>
-                <property name="label">gtk-open</property>
+                <property name="receives_default">False</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">-5</property>
               </widget>
               <packing>
                 <property name="position">1</property>
@@ -685,7 +689,8 @@ rae l &lt;crquan@gmail.com&gt;</property>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </widget>
@@ -718,6 +723,13 @@ rae l &lt;crquan@gmail.com&gt;</property>
       <widget class="GtkMenuItem" id="menu_select_all">
         <property name="visible">True</property>
         <property name="label" translatable="yes">Select _All</property>
+        <property name="use_underline">True</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="menu_copy_page_location">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Copy Page _Location</property>
         <property name="use_underline">True</property>
       </widget>
     </child>
